--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -10,6 +10,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
+        
         <Style TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Bottom"/>
@@ -62,6 +63,21 @@
             AreTransportControlsEnabled="True"
             AutoPlay="True">
         </MediaElement>
+
+        <!--<Slider 
+                Grid.Row="2"
+            Name="mySlider"
+                Grid.Column="0"
+                Margin="50,0,10,0"
+                BorderBrush="Transparent"
+                VerticalAlignment="Center"
+                Grid.ColumnSpan="6"
+                Foreground="Bisque"
+                Background="White"
+                BorderThickness="0" 
+                HorizontalAlignment="Left" 
+                Grid.RowSpan="2" 
+                Width="339"/>-->
 
         <TextBlock
             Text="{Binding SongNameTextBlock}"
