--- a/AudioPlayer/App.xaml
+++ b/AudioPlayer/App.xaml
@@ -1,18 +1,10 @@
-﻿<Application
-    x:Class="AudioPlayer.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AudioPlayer">
-
-    <Application.Resources>
-        
-        <ResourceDictionary>
-            
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Styles/MainStyles.xaml"/>
-                
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-
-    </Application.Resources>
+<Application x:Class="AudioPlayer.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:AudioPlayer">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Styles/MainStyles.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+      <vm:ViewModelLocator x:Key="Locator" xmlns:vm="using:AudioPlayer.ViewModel" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
