--- a/AudioPlayer/MainPage.xaml
+++ b/AudioPlayer/MainPage.xaml
@@ -10,7 +10,6 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
-        
         <Style TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Bottom"/>
@@ -61,7 +60,10 @@
             Grid.ColumnSpan="6"
             RealTimePlayback="True"
             AreTransportControlsEnabled="True"
-            AutoPlay="True">
+            AutoPlay="True"
+            MediaEnded="mPlayer_MediaEnded"
+            >
+            
         </MediaElement>
 
         <!--<Slider 
